# fastapi_project_LLM_ChatBot

./: main.py
LLM_Chat_Bot/: README.md  chat_history.json  docker-compose.yml  pyproject.toml  requirements.txt
LLM_Chat_Bot/pages/: Build_new_chat.py
LLM_Chat_Bot/pages/src/: build_new_chat_services.py
LLM_Chat_Bot/src/conf/: config.py
history/: watch_AsbP5RIv4IY&list=RDAsbP5RIv4IY&start_radio=1.txt  watch_pmoYP_QvGsM.txt
pages/: Build_new_chat.py
src/repository/: chathistory.py
src/services/: file_service.py
untitled/: package-lock.json
